policy/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny # 阻止所有进来的流量 （ingress没有写，默认null）
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all # 允许所有进来的流量 （ingress写{},代表所有）
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny # 阻止pod出的所有流量（Egress没有写，默认null）
spec:
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all # 阻止pod出的所有流量（Egress写{},代表所有）
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
